# chat-analyzer

./: .gitignore  README.md  main.py  pyproject.toml
chat_analyzer/: __init__.py  aggregate.py  analyze.py  data_definitions.py  load.py  types.py  visualize.py
chat_analyzer/analysis/: analysis.py  analyze.py
chat_analyzer/dash_app/: app.py  navigation.py
chat_analyzer/dash_app/pages/: analyze.py  filter.py  upload.py
chat_analyzer/data_processing/: aggregate.py  extract.py  feature_engineering.py  load.py
chat_analyzer/visualization/: visualize.py
tests/: test_aggregate.py  test_analyze.py  test_extract.py  test_feature_engineering.py  test_load.py
