[tool.poetry]
name = "chat-analyzer"
version = "0.1.0"
description = ""
authors = ["Fabio Meier <fabitosh@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_analyzer"}]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.1"
plotly = "^5.17.0"
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"
pandera = "^0.17.2"
pytest = "^7.4.3"
calplot = "^0.1.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
